--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div></div>
 		<div>
 			<h1> Orc Defender </h1>
-			Your cheiftan has left the homeland 
+			Your chieftain has left the homeland for a meeting with the neighboring tribes. Defend the base by clicking enemies until her return. 
 		</div>
 		<div></div>
 		<div class="nested2">
