--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<button id="startButton">Start Game</button>
 			</div>
 			<div id="HQ">Headquarters' Health: 100</div>
-			<div id="timer">Time Until Cheiftan returns: 120 (s)</div>
+			<div id="timer">Time Until Cheiftain returns: 120 (s)</div>
 		</div>
 		<div>
 			<canvas id="myCanvas"></canvas>
